feat: create Asset model to replace Record (#72)
* feat(asset): asset package

* feat(asset): implement handler and repository

* feat(discovery): implement discovery repo

* chore: update swagger with /v1beta1/assets

* feat(asset): return total asset when fetching

* feat(asset): store owner

* fix(elasticsearch): fix breaking tests

* refactor(asset): rename GetConfig to Config

* refactor: rename buildGetConfig to buildAssetConfig

* feat(postgres): return error if affected rows are 0

* refactor(postgre): use squirrel library to simplify query

* refactor(postgres): rename to DEFAULT_MAX_RESULT_SIZE

* refactor: fix lint errors

* refactor(postgres): add *Model suffix to database model

* refactor: use gogenerate to generate mock to designated folder
