# api/handlers/lineage_handler.go
@@ -1,15 +1,14 @@
 package handlers
 
 import (
-	"fmt"
-	"github.com/odpf/salt/log"
 	"net/http"
 	"net/url"
 	"strconv"
 
+	"github.com/odpf/salt/log"
+
 	"github.com/gorilla/mux"
 	"github.com/odpf/columbus/lineage"
-	"github.com/odpf/columbus/record"
 )
 
 // interface to lineage.Service
@@ -32,30 +31,6 @@ func NewLineageHandler(logger log.Logger, provider LineageProvider) *LineageHand
 	return handler
 }
 
-func (handler *LineageHandler) ListLineage(w http.ResponseWriter, r *http.Request) {
-	graph, err := handler.lineageProvider.Graph()
-	if err != nil {
-		handler.logger.Error("error requesting graph", "error", err)
-		status := http.StatusInternalServerError
-		writeJSONError(w, status, http.StatusText(status))
-		return
-	}
-
-	opts := handler.parseOpts(r.URL.Query())
-	res, err := graph.Query(opts)
-	if err != nil {
-		handler.logger.Error("error querying graph", "query", opts, "error", err)
-		status := http.StatusBadRequest
-		if _, ok := err.(record.ErrNoSuchType); ok {
-			status = http.StatusNotFound
-		}
-		writeJSONError(w, status, err.Error())
-		return
-	}
-
-	writeJSON(w, http.StatusOK, res)
-}
-
 func (handler *LineageHandler) GetLineage(w http.ResponseWriter, r *http.Request) {
 	graph, err := handler.lineageProvider.Graph()
 	if err != nil {
@@ -67,15 +42,12 @@ func (handler *LineageHandler) GetLineage(w http.ResponseWriter, r *http.Request
 	requestParams := mux.Vars(r)
 
 	opts := handler.parseOpts(r.URL.Query())
-	opts.Root = fmt.Sprintf("%s/%s", requestParams["type"], requestParams["id"])
+	opts.Root = requestParams["id"]
 
 	res, err := graph.Query(opts)
 	if err != nil {
 		handler.logger.Error("error querying graph", "query", opts, "error", err)
 		status := http.StatusBadRequest
-		if _, ok := err.(record.ErrNoSuchType); ok {
-			status = http.StatusNotFound
-		}
 		writeJSONError(w, status, err.Error())
 		return
 	}
@@ -86,7 +58,6 @@ func (handler *LineageHandler) GetLineage(w http.ResponseWriter, r *http.Request
 func (handler *LineageHandler) parseOpts(u url.Values) lineage.QueryCfg {
 	collapse, _ := strconv.ParseBool(u.Get("collapse"))
 	return lineage.QueryCfg{
-		TypeWhitelist: u["filter.type"],
-		Collapse:      collapse,
+		Collapse: collapse,
 	}
 }
