# api/routes.go
@@ -1,27 +1,33 @@
 package api
 
 import (
-	"github.com/odpf/salt/log"
 	"net/http"
+
+	"github.com/odpf/salt/log"
 
 	"github.com/gorilla/mux"
 	"github.com/odpf/columbus/api/handlers"
+	"github.com/odpf/columbus/asset"
 	"github.com/odpf/columbus/discovery"
-	"github.com/odpf/columbus/record"
 	"github.com/odpf/columbus/tag"
 )
 
 type Config struct {
-	Logger                  log.Logger
-	TagService              *tag.Service
-	TagTemplateService      *tag.TemplateService
-	TypeRepository          record.TypeRepository
-	RecordRepositoryFactory discovery.RecordRepositoryFactory
+	Logger              log.Logger
+	AssetRepository     asset.Repository
+	DiscoveryRepository discovery.Repository
+	TagService          *tag.Service
+	TagTemplateService  *tag.TemplateService
+	LineageProvider     handlers.LineageProvider
+
+	// Deprecated
 	DiscoveryService        *discovery.Service
-	LineageProvider         handlers.LineageProvider
+	TypeRepository          discovery.TypeRepository
+	RecordRepositoryFactory discovery.RecordRepositoryFactory
 }
 
 type Handlers struct {
+	Asset       *handlers.AssetHandler
 	Type        *handlers.TypeHandler
 	Record      *handlers.RecordHandler
 	Search      *handlers.SearchHandler
@@ -34,6 +40,12 @@ func initHandlers(config Config) *Handlers {
 	typeHandler := handlers.NewTypeHandler(
 		config.Logger,
 		config.TypeRepository,
+	)
+
+	assetHandler := handlers.NewAssetHandler(
+		config.Logger,
+		config.AssetRepository,
+		config.DiscoveryRepository,
 	)
 
 	recordHandler := handlers.NewRecordHandler(
@@ -60,6 +72,7 @@ func initHandlers(config Config) *Handlers {
 	)
 
 	return &Handlers{
+		Asset:       assetHandler,
 		Type:        typeHandler,
 		Record:      recordHandler,
 		Search:      searchHandler,
