# api/v1beta1.go
@@ -8,7 +8,7 @@ import (
 )
 
 func setupV1Beta1Router(router *mux.Router, handlers *Handlers) *mux.Router {
-	setupV1Beta1TypeRoutes(router, handlers.Type, handlers.Record)
+	setupV1Beta1AssetRoutes(router, handlers.Asset)
 	setupV1Beta1TagRoutes(router, "/tags", handlers.Tag, handlers.TagTemplate)
 
 	router.Path("/search").
@@ -19,15 +19,40 @@ func setupV1Beta1Router(router *mux.Router, handlers *Handlers) *mux.Router {
 		Methods(http.MethodGet).
 		HandlerFunc(handlers.Search.Suggest)
 
+	router.PathPrefix("/lineage/{id}").
+		Methods(http.MethodGet).
+		HandlerFunc(handlers.Lineage.GetLineage)
+
+	// Deprecated: This route will be removed in the future.
+	// Use /lineage/{id} instead
 	router.PathPrefix("/lineage/{type}/{id}").
 		Methods(http.MethodGet).
 		HandlerFunc(handlers.Lineage.GetLineage)
 
-	router.PathPrefix("/lineage").
-		Methods(http.MethodGet).
-		HandlerFunc(handlers.Lineage.ListLineage)
+	// Deprecated: Use setupV1Beta1AssetRoutes instead
+	setupV1Beta1TypeRoutes(router, handlers.Type, handlers.Record)
 
 	return router
+}
+
+func setupV1Beta1AssetRoutes(router *mux.Router, ah *handlers.AssetHandler) {
+	url := "/assets"
+
+	router.Path(url).
+		Methods(http.MethodGet, http.MethodHead).
+		HandlerFunc(ah.Get)
+
+	router.Path(url).
+		Methods(http.MethodPut, http.MethodHead).
+		HandlerFunc(ah.Upsert)
+
+	router.Path(url+"/{id}").
+		Methods(http.MethodGet, http.MethodHead).
+		HandlerFunc(ah.GetByID)
+
+	router.Path(url+"/{id}").
+		Methods(http.MethodDelete, http.MethodHead).
+		HandlerFunc(ah.Delete)
 }
 
 func setupV1Beta1TypeRoutes(router *mux.Router, th *handlers.TypeHandler, rh *handlers.RecordHandler) {
@@ -53,7 +78,6 @@ func setupV1Beta1TypeRoutes(router *mux.Router, th *handlers.TypeHandler, rh *ha
 	router.Path(recordURL+"/{id}").
 		Methods(http.MethodDelete, http.MethodHead).
 		HandlerFunc(rh.Delete)
-
 }
 
 func setupV1Beta1TagRoutes(router *mux.Router, baseURL string, th *handlers.TagHandler, tth *handlers.TagTemplateHandler) {
